# color_identifier

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/color_identifier/: __init__.py  color_identifier.py
tests/: test_color_identifier.py
